--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -3,11 +3,9 @@
     background-color: rgb(20, 20, 20);
     overflow: scroll;
     text-align: center;
-    overflow: hidden;
 }
 
 .container {
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +16,6 @@
 }
 
 .authed-container {
-    height: 100%;
     display: flex;
     flex-direction: column;
     padding: 30px;
@@ -29,13 +26,15 @@
 }
 
 .header {
-    margin: 0;
+    margin: 10px 10px 0 10px;
     font-size: 50px;
     font-weight: bold;
 }
 
 .sub-text {
     font-size: 25px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .gradient-text {
@@ -114,6 +113,17 @@
     display: flex;
     padding: 30px 0;
     justify-content: center;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+.pokeball {
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
 }
 
 /* KeyFrames */
